test/src/e2e_vm_tests/test_programs/should_fail/recursive_enum/src/main.sw
script;

enum E {
    Eins: bool,
    Zwei: u64,
    Drei: E,
}

fn main() {

}
